--- a/WarOfMinds.Services/WarOfMinds.Services.csproj
+++ b/WarOfMinds.Services/WarOfMinds.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WarOfMinds.Common\WarOfMinds.Common.csproj" />
     <ProjectReference Include="..\WarOfMinds.Repositories\WarOfMinds.Repositories.csproj" />
   </ItemGroup>
