--- a/WarOfMinds.WebApi/WarOfMinds.WebApi.csproj
+++ b/WarOfMinds.WebApi/WarOfMinds.WebApi.csproj
@@ -1,18 +1,18 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WarOfMinds.Common\WarOfMinds.Common.csproj" />
-    <ProjectReference Include="..\WarOfMinds.Repositories\WarOfMinds.Repositories.csproj" />
+    <ProjectReference Include="..\WarOfMinds.Services\WarOfMinds.Services.csproj" />
   </ItemGroup>
 
 </Project>
