adding context and one controller

--- a/WarOfMinds.WebApi/appsettings.json
+++ b/WarOfMinds.WebApi/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "WarOfMindsDB": "Server=(localdb)\\mssqllocaldb;Database=WarOfMindsDB;Trusted_Connection=True;" }
+
 }
