--- a/WarOfMinds.WebApi/appsettings.json
+++ b/WarOfMinds.WebApi/appsettings.json
@@ -7,5 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": { "WarOfMindsDB": "Server=(localdb)\\mssqllocaldb;Database=WarOfMindsDB;Trusted_Connection=True;" }
-  
+  "EloCalculator": {
+    "d": 400,
+    "base": 1,
+    "k": 32
+  }
 }
