--- a/WarOfMinds.WebApi/appsettings.json
+++ b/WarOfMinds.WebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "WarOfMindsDB": "Server=(localdb)\\mssqllocaldb;Database=WarOfMindsDB;Trusted_Connection=True;" }
+  "ConnectionStrings": { "WarOfMindsDB": "Server=(localdb)\\mssqllocaldb;Database=WarOfMindsDB;Trusted_Connection=True;" },
   "EloCalculator": {
     "d": 400,
     "base": 1,
