connecting to game methods

--- a/WarOfMinds.WebApi/appsettings.json
+++ b/WarOfMinds.WebApi/appsettings.json
@@ -14,6 +14,12 @@
   },
   "TriviaHub": {
     "TimeToAnswer": 15,
-    "NumOfQuestions": 20
+    "NumOfQuestions": 20,
+    "timeToSeeAnswer": 5
+  },
+  "Game": {
+    "RatingRange": 500,
+    
   }
+
 }
