--- a/WarOfMinds.Context/WarOfMinds.Context.csproj
+++ b/WarOfMinds.Context/WarOfMinds.Context.csproj
@@ -22,4 +22,19 @@
     <ProjectReference Include="..\WarOfMinds.Repositories\WarOfMinds.Repositories.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="DataBaseDiagram.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>DataBaseDiagram.xsd</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="DataBaseDiagram.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataBaseDiagram.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
 </Project>
