--- a/WarOfMinds.WebApi/appsettings.json
+++ b/WarOfMinds.WebApi/appsettings.json
@@ -13,13 +13,12 @@
     "k": 32
   },
   "TriviaHub": {
-    "TimeToAnswer": 15,
-    "NumOfQuestions": 20,
+    "TimeToAnswer": 10,
+    "NumOfQuestions": 7,
     "timeToSeeAnswer": 5
   },
   "Game": {
-    "RatingRange": 500,
-    
+    "RatingRange": 500    
   }
 
 }
